<?xml version="1.0" encoding="utf-8"?>
<!--DrawerLayout -->
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderSummary">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/side_margin">

        <ImageView
            android:id="@+id/startcover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="450dp"
            android:scaleType="fitStart"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/paymentButtonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/order_summary"
            android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quantity_label"
            style="@style/Widget.Meal.TextView.OrderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/quantity"
            style="@style/Widget.Meal.TextView.OrderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_summary_margin"
            android:text="@string/_6" />

        <View
            android:id="@+id/divider1"
            style="@style/Widget.Meal.Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginBottom="@dimen/side_margin" />

        <TextView
            android:id="@+id/prefer_label"
            style="@style/Widget.Meal.TextView.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefer" />

        <TextView
            android:id="@+id/preference"
            style="@style/Widget.Meal.TextView.OrderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_summary_margin"
            android:text="@string/chef" />

        <View
            android:id="@+id/divider2"
            style="@style/Widget.Meal.Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginBottom="@dimen/side_margin" />

        <TextView
            android:id="@+id/delivery_ins"
            style="@style/Widget.Meal.TextView.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_instructions" />

        <TextView
            android:id="@+id/instruction"
            style="@style/Widget.Meal.TextView.OrderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_summary_margin"
            android:text="@string/front_door" />

        <View
            android:id="@+id/divider3"
            style="@style/Widget.Meal.Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginBottom="@dimen/margin_between_elements" />

        <TextView
            android:id="@+id/order_total"
            style="@style/Widget.Meal.TextView.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total" />

        <TextView
            android:id="@+id/totalPrice"
            style="@style/Widget.Meal.TextView.OrderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_summary_margin"
            android:text="@string/_0" />

    </LinearLayout>

        <com.paypal.checkout.paymentbutton.PayPalButton
            android:id="@+id/paypalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_vertical_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paymentButtonTitle"/>

    </LinearLayout>

</ScrollView>

    <!-- this the navigation view which draws and shows the navigation drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>