<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Meals">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <ImageView
                android:id="@+id/startcover"
                android:layout_width="246dp"
                android:layout_height="195dp"
                android:adjustViewBounds="true"
                android:maxHeight="450dp"
                android:scaleType="fitStart"
                android:src="@drawable/logo"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/selectmealstxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_meals_per_week"
                android:textColor="#090909"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_group_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/btn4"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/btn6"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/btn8"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/btn10"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/btn12"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_12"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/btn14"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_14"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

            <Button
                android:id="@+id/nextbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#090909"
                android:text="Next"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="#090909"
                android:layout_gravity="center"/>

            <View
                android:id="@+id/divider1"
                style="@style/Widget.Meal.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin" />

            <TextView
                android:id="@+id/price_title"
                style="@style/Widget.Meal.TextView.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Price Per Serving"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/price"
                style="@style/Widget.Meal.TextView.OrderSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/order_summary_margin"
                android:text="$15"
                android:layout_gravity="center"/>

            <View
                android:id="@+id/divider2"
                style="@style/Widget.Meal.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin" />

            <TextView
                android:id="@+id/order_total"
                style="@style/Widget.Meal.TextView.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order Total"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/total"
                style="@style/Widget.Meal.TextView.OrderSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/order_summary_margin"
                android:text="$0"
                android:layout_gravity="center"/>

    </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <!-- this the navigation view which draws and shows the navigation drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>